@@ -1,3 +1,9 @@
+Wed Aug 15 12:06:43 CEST 2001 Daniel Veillard <daniel@veillard.com>
+
+	* libexslt/common.c libexslt/math.c libxslt/Makefile.am
+	  libxslt/libxslt.h libxslt/xsltconfig.h.in: cleanup of includes
+	  export xsltconfig.h at make install stage
+
 Tue Aug 14 20:51:09 MDT 2001 John Fleck <jfleck@inkstain.net>
 
 	* doc/xslt.html updated xsltproc description with the many new
